chore: adding lv-storybook

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://registry.yarnpkg.com
-@lv:registry=https://npm.repositories.link-value.fr
+@lv:registry=https://npm.registry.link-value.fr
