--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "import/prefer-default-export": "off",
     "max-len": ["error", 120],
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "react/prop-types": 0
+    "react/prop-types": 1,
+    "jsx-a11y/accessible-emoji": 0
   },
   "plugins": [
     "css-modules"
