feat:  adding dependencies for redux

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-emotion": "^9.2.12",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5"
   },
   "scripts": {
     "storybook": "lv-storybook start",
